--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,5 +10,7 @@
 
   = yield
 
-  - Category.all.each do |category|
-    = link_to category.name, articles_path(category: category.name)
+  %ul
+    %li= link_to "All Articles", root_path
+    - Category.all.each do |category|
+      = link_to category.name, articles_path(category: category.name)
